Bug 107094 - [CI] igt@drv_selftest@mock_scatterlist - dmesg-warn - sg_alloc_table timed out (leading to an incomplete)
Summary: [CI] igt@drv_selftest@mock_scatterlist - dmesg-warn - sg_alloc_table timed ou...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-02 23:06 UTC by Martin Peres
Modified: 2018-07-20 10:41 UTC (History)
2 users (show)

See Also:
i915 platform: GLK
i915 features: GEM/Other


Attachments

Description Martin Peres 2018-07-02 23:06:50 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4416/shard-glk9/igt@drv_selftest@mock_scatterlist.html

[   64.987070] Setting dangerous option mock_selftests - tainting kernel
[   66.016029] sg_alloc_table timed out
[   67.017005] i915_sg_trim timed out


This then leads to an incomplete: https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4415/shard-glk9/igt@drv_selftest@live_gtt.html
Comment 1 Martin Peres 2018-07-02 23:07:48 UTC
This is only seen on shard-glk9. Adding Tomi so as we can know what is different about this machine.
Comment 2 Tomi Sarvela 2018-07-03 07:21:27 UTC
shard-glk9 is production hardware and has same BIOS version and same amount of RAM as any other shard-glks.

Any ideas what this could be about?
Comment 3 Chris Wilson 2018-07-03 08:05:48 UTC
What's unusual here? mock_scatterlist is CI's false positive as it erroneously thinks a pr_note is a warning, and the live_gtt is just CI declaring the system hung before the test is able to complete (too low a threshold on the hung task watchdog -- don't use the hung task watchdog, hard lockup definitely, soft lockup is debatable so needs a relaxed timeout, hung task has too many false positives).
Comment 4 Chris Wilson 2018-07-14 17:42:24 UTC
I do think this was conflating two known bugs. As we've taken measures to reduce the amount of memory used for live_gtt, let's sweep this under the carpet.
Comment 5 Martin Peres 2018-07-20 10:41:49 UTC
It indeed got fixed :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.